--- a/workflow1.yaml
+++ b/workflow1.yaml
@@ -1,4 +1,4 @@
-ame: scATAC
+name: scATAC
 
 # all samples must be either paired-end or single-end
 pairedend: True
@@ -14,16 +14,16 @@ adapters: /data/ohler/Scott/Asli_Scripts/sciAtacAdapters.fa
 
 # barcode reads and references contain the UMIs
 barcodes:
-  I1: 
+  I1:
     reads: /scratch/AG_Ohler/Scott/sciATACtest/noSampleSheet/Undetermined_S0_I1_001.fastq.gz
     reference: meta/I1.tab # can also be a fasta file containing the barcodes
-  I2: 
+  I2:
     reads: /scratch/AG_Ohler/Scott/sciATACtest/noSampleSheet/Undetermined_S0_I2_001.fastq.gz
     reference: meta/I2.tab # can also be a fasta file containing the barcodes
-  I3: 
+  I3:
     reads: /scratch/AG_Ohler/Scott/sciATACtest/noSampleSheet/Undetermined_S0_I3_001.fastq.gz
     reference: meta/I3.tab # can also be a fasta file containing the barcodes
-  I4: /scratch/AG_Ohler/Scott/sciATACtest/noSampleSheet/Undetermined_S0_I4_001.fastq.gz
+  I4:
     reads: /scratch/AG_Ohler/Scott/sciATACtest/noSampleSheet/Undetermined_S0_I4_001.fastq.gz
     reference: meta/I4.tab # can also be a fasta file containing the barcodes
 
