--- a/workflowconfig.yaml
+++ b/workflowconfig.yaml
@@ -15,16 +15,16 @@ adapters: /data/ohler/Scott/Asli_Scripts/sciAtacAdapters.fa
 barcodes:
   I1:
     reads: /scratch/AG_Ohler/Scott/sciATACtest/noSampleSheet/Undetermined_S0_I1_001.fastq.gz
-    reference: meta/I1.tab # can also be a fasta file containing the barcodes
+    reference: /data/akalin/wkopp/sciatac_scott_data/reference_barcodes/I1.tab # can also be a fasta file containing the barcodes
   I2:
     reads: /scratch/AG_Ohler/Scott/sciATACtest/noSampleSheet/Undetermined_S0_I2_001.fastq.gz
-    reference: meta/I2.tab # can also be a fasta file containing the barcodes
+    reference: /data/akalin/wkopp/sciatac_scott_data/reference_barcodes/I2.tab # can also be a fasta file containing the barcodes
   I3:
     reads: /scratch/AG_Ohler/Scott/sciATACtest/noSampleSheet/Undetermined_S0_I3_001.fastq.gz
-    reference: meta/I3.tab # can also be a fasta file containing the barcodes
+    reference: /data/akalin/wkopp/sciatac_scott_data/reference_barcodes/I3.tab # can also be a fasta file containing the barcodes
   I4:
     reads: /scratch/AG_Ohler/Scott/sciATACtest/noSampleSheet/Undetermined_S0_I4_001.fastq.gz
-    reference: meta/I4.tab # can also be a fasta file containing the barcodes
+    reference: /data/akalin/wkopp/sciatac_scott_data/reference_barcodes/I4.tab # can also be a fasta file containing the barcodes
 
 # reference genomes to map against
 # the paths should point to the respective bowtie2 indices
