--- a/workflowconfig.yaml
+++ b/workflowconfig.yaml
@@ -10,7 +10,7 @@ trim_reads: True
 adapters: /data/ohler/Scott/Asli_Scripts/sciAtacAdapters.fa
 
 min_mapq: 5
-max_mismatches: 2
+max_mismatch: 2
 
 # reference genomes to map against
 # the paths should point to the respective bowtie2 indices
