added count_both_ends option
this option configures whether both 5' ends of a paired-end alignment
should be counted.

--- a/workflowconfig.yaml
+++ b/workflowconfig.yaml
@@ -27,6 +27,10 @@ reference:
     macs_gsize: dm
     removechroms: [chrM, _random, chrUn]
 
+# Indictes that both ends of a paired-end alignment should be counted
+# separatly. If True, both mates are counted at the 5' end. Otherwise,
+# the midpoint between the two mates is counted once.
+count_both_ends: True
 
 # binsizes to bin the reference genome
 binsize:
