--- a/workflowconfig.yaml
+++ b/workflowconfig.yaml
@@ -42,10 +42,11 @@ reference:
 # Indictes that both ends of a paired-end alignment should be counted
 # separatly. If True, both mates are counted at the 5' end. Otherwise,
 # the midpoint between the two mates is counted once.
-count_both_ends: True
+count_both_ends: False
 
 # binsizes to bin the reference genome
 binsize:
+  - 200000
   - 10000
   - 1000
   - 2000
